--- a/app/src/main/res/layout/activity_main_principal.xml
+++ b/app/src/main/res/layout/activity_main_principal.xml
@@ -50,7 +50,7 @@
         app:icon="?android:attr/fingerprintAuthDrawable" />
 
     <Button
-        android:id="@+id/regreso"
+        android:id="@+id/out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
